# hypercolor-hass

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  hacs.json  justfile  pyproject.toml
.dev/hass/config/: configuration.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
custom_components/hypercolor/: __init__.py  api.py  binary_sensor.py  brightness.py  button.py  client.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  light.py  manifest.json  number.py  repairs.py  runtime_data.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/hypercolor/translations/: en.json
examples/automations/: bass_dim.yaml  sunset_warm.yaml
examples/dashboards/: audio_reactive_room.yaml
scripts/: check_integration_metadata.py  hass_dev.py
tests/: test_api.py  test_binary_sensor.py  test_brightness.py  test_coordinator.py  test_hass_dev.py  test_hass_e2e.py  test_light.py  test_metadata.py  test_number.py  test_services.py  test_switch.py
